# artifex-client-gtk

./: .gitignore  Cargo.toml  HACKING.md  LICENSE  README.md  meson.build  meson_options.txt
build-aux/: com.elebihan.artifex-client-gtk.Devel.json
data/: com.elebihan.artifex-client-gtk.desktop.in  com.elebihan.artifex-client-gtk.gschema.xml.in  com.elebihan.artifex-client-gtk.metainfo.xml.in.in  meson.build
data/icons/: meson.build
data/resources/: meson.build  resources.gresource.xml
data/resources/ui/: batch_execution_page.blp  connection_bar.blp  connection_status_page.blp  inspection_page.blp  meson.build  operation_page.blp  operations_row.blp  shortcuts.ui  window.blp
po/: POTFILES.in  fr.po  meson.build
src/: application.rs  client.rs  config.rs.in  i18n.rs  main.rs  meson.build  widgets.rs  window.rs
src/widgets/: batch_execution_page.rs  connection_bar.rs  connection_status_page.rs  inspection_page.rs  operation_page.rs  operations_row.rs
