#
# This file is part of artifex-client-gtk
#
# Copyright (c) 2025 Eric Le Bihan
#
# SPDX-License-Identifier: MIT
#

i18n.gettext(meson.project_name(),
             args: ['--keyword=i18n', '--keyword=i18n_f', '--keyword=i18n_k',
                    '--keyword=ni18n:1,2', '--keyword=ni18n_f:1,2', '--keyword=ni18n_k:1,2'],
             preset: 'glib')
